--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "postinstall": "npm run build && npm test",
         "build": "tsc --incremental",
         "test": "ava"
     },
